--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "AutoCAD MText parser written in TypeScript",
   "main": "dist/mtext-parser.js",
   "types": "dist/mtext-parser.d.ts",
-  "type": "module",
   "author": "MLight Lee <mlight.lee@outlook.com>",
   "repository": {
     "type": "git",
@@ -13,9 +12,11 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "example": "npm run build && node src/example.js",
+    "example": "npm run build && node dist/example.js",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json}\""
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json}\"",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src --ext .ts --fix"
   },
   "keywords": [
     "autocad",
@@ -27,6 +28,11 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.3.2",
