--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "@mlightcad/mtext-parser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "AutoCAD MText parser written in TypeScript",
-  "main": "dist/parser.js",
-  "types": "dist/parser.d.ts",
+  "type": "module",
+  "main": "dist/parser.cjs.js",
+  "module": "dist/parser.es.js",
+  "browser": "dist/parser.umd.js",
+  "types": "dist/types/parser.d.ts",
   "author": "MLight Lee <mlight.lee@outlook.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/mlight-lee/mtext-parser"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
+    "build:example": "vite build --config vite.config.ts --mode example",
+    "build:types": "tsc --emitDeclarationOnly",
     "test": "jest",
-    "example": "npm run build && node dist/example.js",
+    "example": "npm run build && npm run build:example && node dist/node/example.cjs.js",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json}\"",
     "lint": "eslint ./src --ext .ts",
@@ -35,13 +40,15 @@
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "vite-plugin-dts": "^3.7.3"
   }
 }
